--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "andy",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.13.14",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.0",
@@ -41,6 +43,9 @@
     "last 3 iOS versions"
   ],
   "dependencies": {
+    "@babel/runtime": "^7.13.17",
+    "classnames": "^2.3.1",
+    "omit.js": "^2.0.2",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1"
   }
