--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "classnames": "^2.3.1",
     "omit.js": "^2.0.2",
     "vue": "^2.6.12",
+    "vue-ref": "^2.0.0",
     "vue-router": "^3.5.1"
   }
 }
